--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jQuery",
     "plugin"
   ],
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "http://memoryroll.martinmetodiev.com",
   "demo": "http://memoryroll.martinmetodiev.com",
   "author": {
@@ -37,7 +37,9 @@
     "url": "https://github.com/martinmethod/memoryroll/issues"
   },
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "2.x"
+  },
   "devDependencies": {
     "bower": "^1.4.1",
     "grunt-contrib-clean": "~0.6.0",
