[SYS] Fixed configuration of Sass-Lint

--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
   },
   "scripts": {
     "start": "npm install && grunt clean:all && grunt build"
-  }
+  },
+  "sasslintConfig": "configs/linters/.sass-lint.yml"
 }
