feat(Deploy): npm, GitHub Pages & GitHub Releases
Refactored deployment process

--- a/bower.json
+++ b/bower.json
@@ -37,8 +37,6 @@
     "dist/js/jquery.memoryroll.min.js.map"
   ],
   "ignore": [
-    ".travis.yml",
-    "deploy_key.enc",
-    "deploy.sh"
+    ".travis.yml"
   ]
 }
