--- a/configs/settings.json
+++ b/configs/settings.json
@@ -1,6 +1,4 @@
 {
-  "port": 8000,
-  "assetsPath": "../my-jquery-plugins-assets/",
-  "githubUsername": "martinmethod",
-  "analytics": "UA-4977149-8"
+  "analytics": "UA-4977149-8",
+  "pluginStyles": false
 }
