Add "node-sass" as a dependency

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "jquery": "3.x"
+    "jquery": "3.x",
+    "node-sass": "^4.13.1"
   },
   "devDependencies": {
     "compass-mixins": "^0.12.10",
