--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,12 @@
     "plugin"
   ],
   "version": "1.3.2",
-  "homepage": "http://memoryroll.martinmetodiev.com",
+  "homepage": "http://memoryroll.metodiev.dev",
   "authors": [
     {
       "name": "Martin Metodiev",
       "email": "metodiev.martin@gmail.com",
-      "url": "http://martinmetodiev.com"
+      "url": "http://metodiev.dev"
     }
   ],
   "repository": {
