--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
     "plugin"
   ],
   "version": "1.3.2",
-  "homepage": "http://memoryroll.metodiev.dev",
-  "demo": "http://memoryroll.metodiev.dev",
+  "homepage": "https://memoryroll.metodiev.dev",
+  "demo": "https://memoryroll.metodiev.dev",
   "author": {
     "name": "Martin Metodiev",
     "email": "metodiev.martin@gmail.com",
-    "url": "http://metodiev.dev"
+    "url": "https://metodiev.dev"
   },
   "maintainers": [
     {
       "name": "Martin Metodiev",
       "email": "metodiev.martin@gmail.com",
-      "url": "http://metodiev.dev"
+      "url": "https://metodiev.dev"
     }
   ],
   "repository": {
