--- a/bower.json
+++ b/bower.json
@@ -15,17 +15,17 @@
     "plugin"
   ],
   "version": "1.4.0",
-  "homepage": "https://memoryroll.metodiev.dev",
+  "homepage": "https://memoryroll.mev.bg",
   "authors": [
     {
       "name": "Martin Metodiev",
-      "email": "metodiev.martin@gmail.com",
-      "url": "https://metodiev.dev"
+      "email": "martin@mev.bg",
+      "url": "https://mev.bg"
     }
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/martinmethod/memoryroll.git"
+    "url": "git://github.com/mevbg/memoryroll.git"
   },
   "license": "MIT",
   "dependencies": {
