Fix Node.js engine to version 10.x

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   "main": "dist/js/jquery.memoryroll.min.js",
   "directories": {},
   "engines": {
-    "node": ">= 0.8.0"
+    "node": "10.x"
   },
   "scripts": {
     "start": "npm install && grunt clean:all && grunt build"
